# UkrCoop

./: .gitignore  CMakeLists.txt  README.md  UkrCoop.sln
UkrCoop/: Chat_log.cpp  ConVars.h  HL2.cpp  HL2.h  HookEvent.cpp  HookEvent.h  Log_messege.cpp  TickRegen.cpp  TickRegen.h  UkrCoop.vcxproj  UkrCoop.vcxproj.filters  bulitnum.cpp  bulitnum.h  chat_log.h  extension.cpp  extension.h  log_messege.h
UkrCoop/GeoIP_SDK/: GeoIP.c
UkrCoop/Interface/: IUkrCoop.h
UkrCoop/sdk/: Strings.h  smsdk_config.h  smsdk_ext.h
UkrPerks/: CHookEvent.cpp  CHookEvent.h  CPerks.cpp  CPerks.h  UkrPerks.vcxproj  UkrPerks.vcxproj.filters  Utils.h  extension.cpp  extension.h  smsdk_config.h
include/: CActionHandle.h  CActionHook.h  CActionImpl.h  CActionShared.h  CActionVtableSwap.h  CAddAbility.h  CAdminMenu.h  CAmmoDef.h  CAmmoPack.h  CBaseBans.h  CCmdRunHook.h  CCreatePlayerBot.h  CGameEventListener.h  CHandleOpen.h  CLuaPropProxy.h  CStudio.h  CTempEntity.h  CTopMenuBan.h  CTopMenuRespawn.h  CTopMenuTeleport.h  CTrace.h  CUserMessage.h  CallMember.h  ConVar_l4d.h  HL2.h  IBaseBans.h  LuaListthink.h  MemberFunctionWrapper.h  MyNatives.h  MyTank.h  MyWitch.h  TickRegen.h  chat_log.h  configs.h  detourhelpers.h  detours.h  extension.h  log_messege.h  vtable_hook_helper.h
include/Interface/: IBaseAbility.h  IBaseAnimating.h  IBaseAnimatingOverlay.h  IBaseCombatCharacter.h  IBaseCombatWeapon.h  IBaseEntity.h  IBaseFlex.h  IBaseMultiplayerPlayer.h  IBasePlayer.h  IBaseTempEntity.h  IBaseToggle.h  IBaseTrigger.h  IBody.h  IBossZombiePlayerBot.h  ICSPlayer.h  ICheckpoint.h  ICollisionProperty.h  IContextualQuery.h  IDynamicLight.h  IEntityDissolve.h  IGameRules.h  IGeoIP.h  IInfected.h  IIntention.h  ILocomotion.h  IMusic.h  INavArea.h  INavLadder.h  INavMesh.h  INextBot.h  INextBotBehavior.h  INextBotChasePath.h  INextBotCombatCharacter.h  INextBotComponent.h  INextBotEventResponder.h  INextBotMeneger.h  INextBotPath.h  INextBotPathFollow.h  INextBotPlayer.h  INextBotRetreatPath.h  (+19 more)
include/sdk/: ai_speechconcept.h  bulitnum.h  smsdk_config.h  smsdk_ext.h
src/: CActionHook.cpp  CActionImpl.cpp  CActionShared.cpp  CAddAbility.cpp  CAdminMenu.cpp  CAmmoDef.cpp  CAmmoPack.cpp  CBaseBans.cpp  CCallHelperSetup.cpp  CCmdRunHook.cpp  CCreatePlayerBot.cpp  CLuaPropProxy.cpp  CStudio.cpp  CTempEntity.cpp  CTopMenuBan.cpp  CTopMenuRespawn.cpp  CTopMenuTeleport.cpp  CTrace.cpp  CUserMessage.cpp  Chat_log.cpp  ConVar_l4d.cpp  HL2.cpp  Log_messege.cpp  LuaListthink.cpp  MyLiveSurvivorCount.cpp  MyNatives.cpp  MyTank.cpp  MyTankAttack.cpp  MyTankBehavior.cpp  MyTankIdle.cpp  MyWitch.cpp  MyWitchAngry.cpp  MyWitchAttack.cpp  MyWitchBehavior.cpp  MyWitchBlinded.cpp  MyWitchBurn.cpp  MyWitchDying.cpp  MyWitchEvilAttack.cpp  MyWitchIdle.cpp  MyWitchKillIncapVictim.cpp  (+9 more)
src/GeoIP_SDK/: GeoIP.c
src/Interface/: IBaseAbility.cpp  IBaseAnimating.cpp  IBaseAnimatingOverlay.cpp  IBaseCombatCharacter.cpp  IBaseCombatWeapon.cpp  IBaseEntity.cpp  IBaseFlex.cpp  IBasePlayer.cpp  IBaseTempEntity.cpp  IBody.cpp  IBossZombiePlayerBot.cpp  ICSPlayer.cpp  ICheckpoint.cpp  (+26 more)
(+9 files in other folders)
